tests/valid_inputs/bin_and.cpp
// test '&'

int main() {
	return 43 & 42;
}
