tests/invalid_inputs/sema/func_param_func.cpp

void f(void (func_param)());

int main() {
}
